WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221942
EventHandler::updateSelectionForMouseDownDispatchingSelectStart should not use an orphaned selection
https://bugs.webkit.org/show_bug.cgi?id=221942
Summary
EventHandler::updateSelectionForMouseDownDispatchingSelectStart should not us...
Ryosuke Niwa
Reported
2021-02-15 17:53:56 PST
Fix what appears to be the root/primary cause of the
bug 221786
and add a test.
Attachments
Patch
(15.64 KB, patch)
2021-02-15 18:28 PST
,
Ryosuke Niwa
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fixed release builds
(15.85 KB, patch)
2021-02-15 19:01 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(15.95 KB, patch)
2021-02-15 20:04 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2021-02-15 18:28:36 PST
Created
attachment 420410
[details]
Patch
Ryosuke Niwa
Comment 2
2021-02-15 19:01:14 PST
Created
attachment 420414
[details]
Fixed release builds
Wenson Hsieh
Comment 3
2021-02-15 19:07:29 PST
Comment on
attachment 420414
[details]
Fixed release builds View in context:
https://bugs.webkit.org/attachment.cgi?id=420414&action=review
r=me (assuming EWS is green)
> LayoutTests/editing/selection/click-selection-with-selectstart-node-removal.html:32 > + const boundingRect = editor.getBoundingClientRect(); > + const x = boundingRect.x + 10; > + const y = boundingRect.y + 10; > + UIHelper.activateAndWaitForInputSessionAt(x, y);
Nit - can we just `UIHelper.activateElement(editor);` here?
Ryosuke Niwa
Comment 4
2021-02-15 19:14:44 PST
(In reply to Wenson Hsieh from
comment #3
)
> Comment on
attachment 420414
[details]
> Fixed release builds > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=420414&action=review
> > r=me (assuming EWS is green) > > > LayoutTests/editing/selection/click-selection-with-selectstart-node-removal.html:32 > > + const boundingRect = editor.getBoundingClientRect(); > > + const x = boundingRect.x + 10; > > + const y = boundingRect.y + 10; > > + UIHelper.activateAndWaitForInputSessionAt(x, y); > > Nit - can we just `UIHelper.activateElement(editor);` here?
Hm... maybe? Does WebKitTestRunner knows to gracefully dismiss the keyword if it starts coming up?
Wenson Hsieh
Comment 5
2021-02-15 19:17:16 PST
(In reply to Ryosuke Niwa from
comment #4
)
> (In reply to Wenson Hsieh from
comment #3
) > > Comment on
attachment 420414
[details]
> > Fixed release builds > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=420414&action=review
> > > > r=me (assuming EWS is green) > > > > > LayoutTests/editing/selection/click-selection-with-selectstart-node-removal.html:32 > > > + const boundingRect = editor.getBoundingClientRect(); > > > + const x = boundingRect.x + 10; > > > + const y = boundingRect.y + 10; > > > + UIHelper.activateAndWaitForInputSessionAt(x, y); > > > > Nit - can we just `UIHelper.activateElement(editor);` here? > > Hm... maybe? Does WebKitTestRunner knows to gracefully dismiss the keyword > if it starts coming up?
It should, yes. Though to be totally safe, you can do something like: await UIHelper.activateElementAndWaitForInputSession(editor); ...instead.
Ryosuke Niwa
Comment 6
2021-02-15 20:04:07 PST
Created
attachment 420420
[details]
Patch for landing
Ryosuke Niwa
Comment 7
2021-02-15 20:04:22 PST
Comment on
attachment 420420
[details]
Patch for landing Wait for EWS
Ryosuke Niwa
Comment 8
2021-02-16 14:05:11 PST
Comment on
attachment 420420
[details]
Patch for landing Clearing flags on attachment: 420420 Committed
r272928
: <
https://commits.webkit.org/r272928
>
Ryosuke Niwa
Comment 9
2021-02-16 14:05:13 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2021-02-16 14:07:29 PST
<
rdar://problem/74405933
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug