Source/WebCore/page/DOMSelection.cpp
@@ -367,11 +367,7 @@ ExceptionOr<Ref<Range>> DOMSelection::getRangeAt(unsigned index)
         return frame->selection().associatedLiveRange().releaseNonNull();
     if (auto shadowAncestor = selectionShadowAncestor(frame))
         return createLiveRange(makeSimpleRange(*makeBoundaryPointBeforeNode(*shadowAncestor)));
-    auto simpleRange = frame->selection().selection().firstRange();
-    ASSERT(simpleRange); // selection is orphaned but this shouldn't happen.
-    if (!simpleRange)
-        return Exception { IndexSizeError };
-    return createLiveRange(*simpleRange);
+    return createLiveRange(*frame->selection().selection().firstRange());
 }
 
 void DOMSelection::removeAllRanges()
